# ros_udp_bridge

./: CMakeLists.txt  Dockerfile  changelog.md  package.xml  readme.md
config/: params.yaml
include/nautilus_udp_bridge/: bridge.h
launch/: bridge.launch  bridge_test.launch  odometry_stub.launch
src/: bridge.cpp  dumb_client.cpp  odometry_stub.cpp
