<?xml version="1.0"?>
<package format="2">
  <name>nautilus_udp_bridge</name>
  <version>0.0.8</version>
  <description>The nautilus udp_bridge package</description>

  <maintainer email="angelos.plastropoulos@innotecuk.com">Angelos Plastropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>

</package>
